# ETL-Azure-Connector

./: .gitignore  README.md  pyproject.toml
data/: file_swarm_generator.py
data/csv_folder/: customer.csv
src/: extract.py  load.py  main.py  transform.py
tests/: __init__.py  conftest.py  connection_test.py  integration_test.py  unit_test.py
